Fixed horizontal scroll issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,3 +4,9 @@
   --color-brand-pink: #ffaae5;
   --color-soft-pink: #ffe9fa;
 }
+
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
